# readmify

./: CMakeLists.txt
src/: ProjectData.h  main.cpp
src/cli/: Interface.cpp
src/cli/components/: Divider.h  LoadingBar.cpp
src/constants/: ColorMap.h  DataStructures.h
src/include/: ColoredOutputUtil.h  Interface.h  LoadingBar.h
src/services/: Extractors.h
src/services/extractors/: extractProjectPrimitives.cpp  extractProjectStructure.cpp
